@@ -1,23 +1,24 @@
 import java.io.*;
-import java.lang.foreign.*;
+import java.nio.*;
 import java.nio.channels.*;
 import java.util.*;
 
 public class CsvAnalytics {
     static final String[] CATEGORIES = {"books", "clothing", "electronics", "food", "health", "home", "sports", "toys"};
     static final String[] REGIONS = {"east", "north", "south", "west"};
+    static final int CHUNK_SIZE = 1 << 16;
 
     public static void main(String[] args) throws Exception {
         String filename = args.length > 0 ? args[0] : "data.csv";
 
-        try (var arena = Arena.ofShared();
-             FileChannel channel = new RandomAccessFile(filename, "r").getChannel()) {
+        try (RandomAccessFile raf = new RandomAccessFile(filename, "r");
+             FileChannel channel = raf.getChannel()) {
 
             long fileSize = channel.size();
-            MemorySegment segment = channel.map(FileChannel.MapMode.READ_ONLY, 0, fileSize, arena);
+            MappedByteBuffer buffer = channel.map(FileChannel.MapMode.READ_ONLY, 0, fileSize);
 
-            long headerEnd = 0;
-            while (headerEnd < fileSize && segment.get(ValueLayout.JAVA_BYTE, headerEnd) != '\n') headerEnd++;
+            int headerEnd = 0;
+            while (headerEnd < fileSize && buffer.get(headerEnd) != '\n') headerEnd++;
             headerEnd++;
 
             int numThreads = Runtime.getRuntime().availableProcessors();
@@ -30,7 +31,7 @@ public class CsvAnalytics {
             chunkStarts[0] = headerEnd;
             for (int t = 1; t < numThreads; t++) {
                 long pos = headerEnd + t * chunkSize;
-                while (pos < fileSize && segment.get(ValueLayout.JAVA_BYTE, pos) != '\n') pos++;
+                while (pos < fileSize && buffer.get((int) pos) != '\n') pos++;
                 pos++;
                 chunkStarts[t] = pos;
                 chunkEnds[t - 1] = chunkStarts[t];
@@ -42,29 +43,30 @@ public class CsvAnalytics {
 
             for (int t = 0; t < numThreads; t++) {
                 final int idx = t;
-                final long start = chunkStarts[t];
-                final long end = chunkEnds[t];
-                threads[t] = Thread.ofVirtual().start(() -> {
-                    results[idx] = processChunk(segment, start, end);
+                final int start = (int) chunkStarts[t];
+                final int end = (int) chunkEnds[t];
+                threads[t] = new Thread(() -> {
+                    results[idx] = processChunk(buffer, start, end);
                 });
+                threads[t].start();
             }
             for (Thread thread : threads) thread.join();
 
             long totalRows = 0;
-            double totalRevenue = 0.0;
-            double minPrice = Double.MAX_VALUE;
-            double maxPrice = Double.MIN_VALUE;
+            long totalRevenueFP = 0;
+            long minPriceFP = Long.MAX_VALUE;
+            long maxPriceFP = Long.MIN_VALUE;
             long totalQuantity = 0;
-            double[] revenueByCategory = new double[CATEGORIES.length];
-            double[] revenueByRegion = new double[REGIONS.length];
+            long[] revenueByCategory = new long[CATEGORIES.length];
+            long[] revenueByRegion = new long[REGIONS.length];
             long[] countByCategory = new long[CATEGORIES.length];
 
             for (PartialResult r : results) {
                 totalRows += r.totalRows;
-                totalRevenue += r.totalRevenue;
+                totalRevenueFP += r.totalRevenueFP;
                 totalQuantity += r.totalQuantity;
-                if (r.minPrice < minPrice) minPrice = r.minPrice;
-                if (r.maxPrice > maxPrice) maxPrice = r.maxPrice;
+                if (r.minPriceFP < minPriceFP) minPriceFP = r.minPriceFP;
+                if (r.maxPriceFP > maxPriceFP) maxPriceFP = r.maxPriceFP;
                 for (int i = 0; i < CATEGORIES.length; i++) {
                     revenueByCategory[i] += r.revenueByCategory[i];
                     countByCategory[i] += r.countByCategory[i];
@@ -76,23 +78,23 @@ public class CsvAnalytics {
 
             System.out.println("=== CSV Analytics Results ===");
             System.out.println("Total rows: " + totalRows);
-            System.out.println("Total revenue: " + String.format("%.2f", totalRevenue));
+            System.out.println("Total revenue: " + fpToString(totalRevenueFP));
             System.out.println("Total quantity: " + totalQuantity);
-            System.out.println("Min price: " + String.format("%.2f", minPrice));
-            System.out.println("Max price: " + String.format("%.2f", maxPrice));
-            System.out.println("Avg revenue per row: " + String.format("%.2f", totalRevenue / totalRows));
+            System.out.println("Min price: " + fpToString(minPriceFP));
+            System.out.println("Max price: " + fpToString(maxPriceFP));
+            System.out.println("Avg revenue per row: " + String.format("%.2f", (double) totalRevenueFP / 100.0 / totalRows));
             System.out.println();
             System.out.println("Revenue by category:");
             Integer[] catIdx = new Integer[CATEGORIES.length];
             for (int i = 0; i < catIdx.length; i++) catIdx[i] = i;
-            Arrays.sort(catIdx, (a, b) -> Double.compare(revenueByCategory[b], revenueByCategory[a]));
-            for (int i : catIdx) System.out.println("  " + CATEGORIES[i] + ": " + String.format("%.2f", revenueByCategory[i]));
+            Arrays.sort(catIdx, (a, b) -> Long.compare(revenueByCategory[b], revenueByCategory[a]));
+            for (int i : catIdx) System.out.println("  " + CATEGORIES[i] + ": " + fpToString(revenueByCategory[i]));
             System.out.println();
             System.out.println("Revenue by region:");
             Integer[] regIdx = new Integer[REGIONS.length];
             for (int i = 0; i < regIdx.length; i++) regIdx[i] = i;
-            Arrays.sort(regIdx, (a, b) -> Double.compare(revenueByRegion[b], revenueByRegion[a]));
-            for (int i : regIdx) System.out.println("  " + REGIONS[i] + ": " + String.format("%.2f", revenueByRegion[i]));
+            Arrays.sort(regIdx, (a, b) -> Long.compare(revenueByRegion[b], revenueByRegion[a]));
+            for (int i : regIdx) System.out.println("  " + REGIONS[i] + ": " + fpToString(revenueByRegion[i]));
             System.out.println();
             System.out.println("Count by category:");
             Arrays.sort(catIdx, (a, b) -> Long.compare(countByCategory[b], countByCategory[a]));
@@ -100,64 +102,104 @@ public class CsvAnalytics {
         }
     }
 
-    static PartialResult processChunk(MemorySegment seg, long start, long end) {
+    static String fpToString(long fp) {
+        long whole = fp / 10000;
+        long frac = Math.abs(fp % 10000);
+        return String.format("%d.%02d", whole, frac / 100);
+    }
+
+    static PartialResult processChunk(MappedByteBuffer masterBuffer, int start, int end) {
         PartialResult result = new PartialResult();
+        byte[] bulk = new byte[CHUNK_SIZE];
+        int pos = start;
+
         byte[] lineBytes = new byte[256];
-        long pos = start;
+        int lineLen = 0;
 
         while (pos < end) {
-            int lineLen = 0;
-            while (pos < end) {
-                byte b = seg.get(ValueLayout.JAVA_BYTE, pos++);
-                if (b == '\n') break;
-                if (lineLen < lineBytes.length) lineBytes[lineLen++] = b;
-            }
-            if (lineLen == 0) continue;
+            int toRead = Math.min(CHUNK_SIZE, end - pos);
+            ByteBuffer slice = masterBuffer.duplicate();
+            slice.position(pos);
+            slice.limit(pos + toRead);
+            slice.get(bulk, 0, toRead);
+            pos += toRead;
 
-            int p0 = -1, p1 = -1, p2 = -1, p3 = -1, p4 = -1;
-            int commaCount = 0;
-            for (int i = 0; i < lineLen; i++) {
-                if (lineBytes[i] == ',') {
-                    commaCount++;
-                    switch (commaCount) {
-                        case 1: p0 = i; break;
-                        case 2: p1 = i; break;
-                        case 3: p2 = i; break;
-                        case 4: p3 = i; break;
-                        case 5: p4 = i; break;
-                    }
+            for (int i = 0; i < toRead; i++) {
+                byte b = bulk[i];
+                if (b == '\n') {
+                    if (lineLen > 0) processLine(lineBytes, lineLen, result);
+                    lineLen = 0;
+                } else {
+                    if (lineLen < lineBytes.length) lineBytes[lineLen++] = b;
                 }
             }
-            if (p4 == -1) continue;
+        }
+        if (lineLen > 0) processLine(lineBytes, lineLen, result);
+        return result;
+    }
 
-            int catOrd = matchCategory(lineBytes, p0 + 1, p1);
-            int regOrd = matchRegion(lineBytes, p1 + 1, p2);
-            int quantity = parseIntBytes(lineBytes, p2 + 1, p3);
-            double price = parseDoubleBytes(lineBytes, p3 + 1, p4);
-            double discount = parseDoubleBytes(lineBytes, p4 + 1, lineLen);
-
-            double revenue = quantity * price * (1.0 - discount);
-            result.totalRows++;
-            result.totalRevenue += revenue;
-            result.totalQuantity += quantity;
-            if (price < result.minPrice) result.minPrice = price;
-            if (price > result.maxPrice) result.maxPrice = price;
-
-            if (catOrd >= 0) {
-                result.revenueByCategory[catOrd] += revenue;
-                result.countByCategory[catOrd]++;
-            }
-            if (regOrd >= 0) {
-                result.revenueByRegion[regOrd] += revenue;
+    static void processLine(byte[] b, int len, PartialResult result) {
+        int c0 = 0, c1 = 0, c2 = 0, c3 = 0, c4 = 0;
+        int found = 0;
+        for (int i = 0; i < len && found < 5; i++) {
+            if (b[i] == ',') {
+                found++;
+                switch (found) {
+                    case 1: c0 = i; break;
+                    case 2: c1 = i; break;
+                    case 3: c2 = i; break;
+                    case 4: c3 = i; break;
+                    case 5: c4 = i; break;
+                }
             }
         }
-        return result;
+        if (found < 5) return;
+
+        int catOrd = matchCategory(b, c0 + 1, c1);
+        int regOrd = matchRegion(b, c1 + 1);
+        int quantity = parseIntBytes(b, c2 + 1, c3);
+        long priceFP = parseFP(b, c3 + 1, c4);
+        long discountFP = parseFP(b, c4 + 1, len);
+
+        long revenueFP = (quantity * priceFP * (10000 - discountFP)) / 10000;
+        result.totalRows++;
+        result.totalRevenueFP += revenueFP;
+        result.totalQuantity += quantity;
+        if (priceFP < result.minPriceFP) result.minPriceFP = priceFP;
+        if (priceFP > result.maxPriceFP) result.maxPriceFP = priceFP;
+
+        if (catOrd >= 0) {
+            result.revenueByCategory[catOrd] += revenueFP;
+            result.countByCategory[catOrd]++;
+        }
+        if (regOrd >= 0) {
+            result.revenueByRegion[regOrd] += revenueFP;
+        }
+    }
+
+    static long parseFP(byte[] b, int from, int to) {
+        long intPart = 0;
+        int i = from;
+        while (i < to && b[i] != '.') {
+            intPart = intPart * 10 + (b[i] - '0');
+            i++;
+        }
+        if (i >= to) return intPart * 10000;
+        i++;
+        long frac = 0;
+        int digits = 0;
+        while (i < to && digits < 4) {
+            frac = frac * 10 + (b[i] - '0');
+            digits++;
+            i++;
+        }
+        while (digits < 4) { frac *= 10; digits++; }
+        return intPart * 10000 + frac;
     }
 
     static int matchCategory(byte[] b, int from, int to) {
         int len = to - from;
-        byte first = b[from];
-        return switch (first) {
+        return switch (b[from]) {
             case 'b' -> 0;
             case 'c' -> 1;
             case 'e' -> 2;
@@ -169,7 +211,7 @@ public class CsvAnalytics {
         };
     }
 
-    static int matchRegion(byte[] b, int from, int to) {
+    static int matchRegion(byte[] b, int from) {
         return switch (b[from]) {
             case 'e' -> 0;
             case 'n' -> 1;
@@ -187,35 +229,14 @@ public class CsvAnalytics {
         return result;
     }
 
-    static double parseDoubleBytes(byte[] b, int from, int to) {
-        long intPart = 0;
-        int i = from;
-        while (i < to && b[i] != '.') {
-            intPart = intPart * 10 + (b[i] - '0');
-            i++;
-        }
-        if (i >= to) return intPart;
-        i++;
-        long fracPart = 0;
-        int fracDigits = 0;
-        while (i < to) {
-            fracPart = fracPart * 10 + (b[i] - '0');
-            fracDigits++;
-            i++;
-        }
-        double divisor = 1.0;
-        for (int d = 0; d < fracDigits; d++) divisor *= 10.0;
-        return intPart + fracPart / divisor;
-    }
-
     static class PartialResult {
         long totalRows = 0;
-        double totalRevenue = 0.0;
-        double minPrice = Double.MAX_VALUE;
-        double maxPrice = Double.MIN_VALUE;
+        long totalRevenueFP = 0;
+        long minPriceFP = Long.MAX_VALUE;
+        long maxPriceFP = Long.MIN_VALUE;
         long totalQuantity = 0;
-        double[] revenueByCategory = new double[CATEGORIES.length];
-        double[] revenueByRegion = new double[REGIONS.length];
+        long[] revenueByCategory = new long[CATEGORIES.length];
+        long[] revenueByRegion = new long[REGIONS.length];
         long[] countByCategory = new long[CATEGORIES.length];
     }
 }
